<resources>
    <string name="app_name">BHU</string>
    <string name="title_activity_login">Login</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="login">Login</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="news">News</string>
    <string name="profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="test_lorem">Hello world lorem ipsum is the test text. It has to be a little long
        in order to satisfy the criteria for the test.
    </string>
    <string name="featured_image">Featured Image</string>
    <string name="longer_test_ipsum">n this tutorial, you have learned how to use the CardView and
        RecyclerView widgets that were introduced in Android Lollipop. You have also seen examples
        of how to make use of these widgets in Material Design apps. Note that even though a
        RecyclerView can do almost everything a ListView can, for small datasets, using a ListView
        is still preferable as it requires fewer lines of code.
    </string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="create_account">No account yet? Create one</string>
    <string name="title_activity_story">Story</string>
    <string name="logout">Logout</string>
    <string name="title_activity_register">Register</string>
    <string name="have_accoun_login">Have an account already? Login</string>
    <string name="Register">Register</string>
    <string name="matriculation_no">Matriculation Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="select_department">Select Department</string>
    <string name="select_level">Select Level</string>
    <string name="registration_success">You have been registered successfully. Please login</string>
    <string name="john_doe">By John Doe</string>
    <string name="test_date">November 22</string>
    <string name="my_profile">My Profile</string>
    <string name="my_courses">My Courses</string>
    <string name="refresh_courses">Refresh Courses</string>
    <string name="no_registered_courses">No Registered Courses</string>
    <string name="add_your_courses">Add Your Courses</string>
    <string name="add_your_courses_now">Add Your Courses Now</string>
    <string name="search">Search</string>
    <string name="submit">Submit</string>
    <string name="cheese_ipsum">CoordinatorLayout extends the ability to accomplish many of the Google\'s Material Design scrolling effects. Currently, there are several ways provided in this framework that allow it to work without needing to write your own custom animation code.</string>
    <string name="course_code">Course Code</string>


    <string-array name="departments_array">
        <item>Accounting</item>
        <item>Anatomy</item>
        <item>Biochemistry</item>
        <item>Business Administration</item>
        <item>Computer Science</item>
        <item>Economics</item>
        <item>English Language</item>
        <item>Industrial Chemistry</item>
        <item>Mass Communication</item>
        <item>Microbiology</item>
        <item>Medicine</item>
        <item>Physiology</item>
        <item>Political Science</item>
        <item>Sociology</item>
    </string-array>

    <string-array name="department_codes_array">
        <item>ACC</item>
        <item>ANA</item>
        <item>BCH</item>
        <item>BUS</item>
        <item>CMP</item>
        <item>ECO</item>
        <item>ENG</item>
        <item>ICH</item>
        <item>MAC</item>
        <item>MCB</item>
        <item>MED</item>
        <item>PHY</item>
        <item>POL</item>
        <item>SOC</item>
    </string-array>


    <string-array name="level_array">
        <item>100</item>
        <item>200</item>
        <item>300</item>
        <item>400</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="no_activities_available">No Activities Lined Up. You\'ll be notified if anything comes up</string>
    <string name="could_not_connect_to_server">I couldn\'t communicate with server. Please try again</string>
    <string name="i_really_don_t_know">I really don\'t Know</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="avatar">Avatar</string>
    <string name="upload_avatar">Change Avatar</string>
    <string name="navigation">Navigation</string>
    <string name="services">Services</string>
    <string name="my_bingham_my_pride">My Bingham, My Pride</string>
    <string name="social">Social</string>
    <string name="campus_services">Campus Services</string>
    <string name="polls">Polls</string>
    <string name="home">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="profile_photo">Profile Image</string>
</resources>
